implement spatial regularization (#134)
* describe how spatial and uniqueness regularization calculated

* implement `Polyclonal._site_avg_abs_diff`

* make `Polyclonal._binary_sites` have array rather than tuple values

* test gradients of `Polyclonal._site_avg_abs_diff`

* add "atom" as colum in `extract_atom_locations` output

* implement `inter_residue_distances`

* Add `Polyclonal.distance_matrix` attribute set via `spatial_distances` parameter

* document spatial reg weights for lambda_1 and _2

* untested implementation of `Polyclonal._reg_spatial`

* spatial regularization passes gradient tests

* spatial regularization passes doctest

* add spatial distances to site-level model

* make avg abs site escape approx RMS (before was calculated wrong)

* `black` formatting

* fix bug in initialization of `spatial_distances`

--- a/tests/test_gradients.ipynb
+++ b/tests/test_gradients.ipynb
@@ -18,6 +18,13 @@
    "execution_count": 1,
    "id": "4cee1ee4-1629-4310-9f65-42e54504f755",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-10T14:49:19.187131Z",
+     "iopub.status.busy": "2022-11-10T14:49:19.186714Z",
+     "iopub.status.idle": "2022-11-10T14:49:21.269840Z",
+     "shell.execute_reply": "2022-11-10T14:49:21.268980Z",
+     "shell.execute_reply.started": "2022-11-10T14:49:19.187055Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -75,6 +82,11 @@
     "    columns=[\"barcode\", \"aa_substitutions\"],\n",
     ")\n",
     "\n",
+    "spatial_distances = pd.DataFrame(\n",
+    "    [(1, 2, 1.5), (1, 4, 7.5)],\n",
+    "    columns=[\"site_1\", \"site_2\", \"distance\"],\n",
+    ")\n",
+    "\n",
     "escape_probs = polyclonal_sim.prob_escape(\n",
     "    variants_df=variants_df, concentrations=[1.0, 2.0, 4.0]\n",
     ")\n",
@@ -86,6 +98,7 @@
     "models[\"same variants all concentration, not fit\"] = Polyclonal(\n",
     "    data_to_fit=data_to_fit,\n",
     "    activity_wt_df=activity_wt_df,\n",
+    "    spatial_distances=spatial_distances,\n",
     "    site_escape_df=pd.DataFrame.from_records(\n",
     "        [(\"e1\", 1, 1.0), (\"e1\", 4, 0.0), (\"e2\", 1, 0.0), (\"e2\", 4, 2.0)],\n",
     "        columns=[\"epitope\", \"site\", \"escape\"],\n",
@@ -97,6 +110,7 @@
     "models[\"different variants among concentrations, not fit\"] = Polyclonal(\n",
     "    data_to_fit=data_to_fit.head(len(data_to_fit) - 1),\n",
     "    activity_wt_df=activity_wt_df,\n",
+    "    spatial_distances=spatial_distances,\n",
     "    site_escape_df=pd.DataFrame.from_records(\n",
     "        [(\"e1\", 1, 1.0), (\"e1\", 4, 0.0), (\"e2\", 1, 0.0), (\"e2\", 4, 2.0)],\n",
     "        columns=[\"epitope\", \"site\", \"escape\"],\n",
@@ -124,6 +138,13 @@
    "execution_count": 2,
    "id": "80de92ae-ef0b-4216-8884-f1b2f8a8106c",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-10T14:49:21.273137Z",
+     "iopub.status.busy": "2022-11-10T14:49:21.272932Z",
+     "iopub.status.idle": "2022-11-10T14:49:21.302339Z",
+     "shell.execute_reply": "2022-11-10T14:49:21.301551Z",
+     "shell.execute_reply.started": "2022-11-10T14:49:21.273111Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -197,6 +218,13 @@
    "execution_count": 3,
    "id": "4cd10913-d096-457f-9dff-af8385c7ddeb",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-10T14:49:21.306301Z",
+     "iopub.status.busy": "2022-11-10T14:49:21.306087Z",
+     "iopub.status.idle": "2022-11-10T14:49:21.413693Z",
+     "shell.execute_reply": "2022-11-10T14:49:21.412781Z",
+     "shell.execute_reply.started": "2022-11-10T14:49:21.306280Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -261,6 +289,13 @@
    "execution_count": 4,
    "id": "e6c5bbed-2dde-44bf-9375-ee4b31d673cc",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-10T14:49:21.417232Z",
+     "iopub.status.busy": "2022-11-10T14:49:21.416989Z",
+     "iopub.status.idle": "2022-11-10T14:49:21.425836Z",
+     "shell.execute_reply": "2022-11-10T14:49:21.425252Z",
+     "shell.execute_reply.started": "2022-11-10T14:49:21.417211Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -327,6 +362,13 @@
    "execution_count": 5,
    "id": "89650449-2a91-437a-956f-661a4ece7573",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-10T14:49:21.428575Z",
+     "iopub.status.busy": "2022-11-10T14:49:21.428416Z",
+     "iopub.status.idle": "2022-11-10T14:49:21.444211Z",
+     "shell.execute_reply": "2022-11-10T14:49:21.443449Z",
+     "shell.execute_reply.started": "2022-11-10T14:49:21.428555Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -385,6 +427,187 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2da7b583-029a-4519-8fe0-695990f54615",
+   "metadata": {},
+   "source": [
+    "## Gradient of site average absolute value (differentiable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0291ad6f-a5a3-4ad0-9bbf-e1ad66f28982",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-10T14:49:21.447224Z",
+     "iopub.status.busy": "2022-11-10T14:49:21.446979Z",
+     "iopub.status.idle": "2022-11-10T14:49:21.462936Z",
+     "shell.execute_reply": "2022-11-10T14:49:21.462342Z",
+     "shell.execute_reply.started": "2022-11-10T14:49:21.447203Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Model: same variants all concentration, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: different variants among concentrations, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: same variants all concentration, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: different variants among concentrations, fit\n",
+      "All gradients check\n"
+     ]
+    }
+   ],
+   "source": [
+    "eps = 1e-7\n",
+    "\n",
+    "epsilon = 0.1\n",
+    "\n",
+    "for name, model in models.items():\n",
+    "\n",
+    "    print(f\"\\nModel: {name}\")\n",
+    "\n",
+    "    # analytical\n",
+    "    s, ds = model._site_avg_abs_diff(model._params, epsilon)\n",
+    "\n",
+    "    # numerical\n",
+    "    for iparam in range(len(model._params)):\n",
+    "\n",
+    "        # add a small amount to params\n",
+    "        eps_vec = numpy.zeros(model._params.shape)\n",
+    "        eps_vec[iparam] = eps\n",
+    "        s_eps, _ = model._site_avg_abs_diff(model._params + eps_vec, epsilon)\n",
+    "\n",
+    "        # figure out what beta value is being changed\n",
+    "        a_eps, beta_eps = model._a_beta_from_params(eps_vec)\n",
+    "        if (a_eps == eps).sum() == 1 and (beta_eps == eps).sum() == 0:\n",
+    "            # changing an activity should have no effect on s\n",
+    "            assert (s == s_eps).all()\n",
+    "            continue\n",
+    "        assert (a_eps == eps).sum() == 0\n",
+    "        assert (beta_eps == eps).sum() == 1\n",
+    "        i_mutation, i_epitope = numpy.where(beta_eps == eps)\n",
+    "        i_mutation = i_mutation[0]\n",
+    "        i_epitope == i_epitope[0]\n",
+    "        assert eps == beta_eps[i_mutation, i_epitope]\n",
+    "\n",
+    "        site = (\n",
+    "            model._binarymaps.binary_sites[i_mutation]\n",
+    "            if model._one_binarymap\n",
+    "            else model._binarymaps[0].binary_sites[i_mutation]\n",
+    "        )\n",
+    "        siteindex = list(model._binary_sites).index(site)\n",
+    "\n",
+    "        s_diff = (s_eps - s) / eps\n",
+    "        numerical_grad = s_diff[siteindex, i_epitope]\n",
+    "        analytical_grad = ds[i_mutation, i_epitope]\n",
+    "\n",
+    "        diff = numpy.sqrt((numerical_grad - analytical_grad) ** 2)\n",
+    "        mag = numpy.sqrt(analytical_grad**2)\n",
+    "        if (diff > 1e-6) or (mag > 0 and diff / mag > 1e-3):\n",
+    "            raise ValueError(\n",
+    "                f\"{iparam=}, {diff=}, {mag=}\\n\"\n",
+    "                f\"{analytical_grad=}\\n{numerical_grad=}\\n\"\n",
+    "            )\n",
+    "\n",
+    "    print(\"All gradients check\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b19fd108-30ce-4f47-a434-bb4fae041a07",
+   "metadata": {},
+   "source": [
+    "## Gradient of spatial regularization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6d471132-f3d1-419b-98e2-0e441c1a1445",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-10T14:49:21.465522Z",
+     "iopub.status.busy": "2022-11-10T14:49:21.465382Z",
+     "iopub.status.idle": "2022-11-10T14:49:21.480917Z",
+     "shell.execute_reply": "2022-11-10T14:49:21.480348Z",
+     "shell.execute_reply.started": "2022-11-10T14:49:21.465504Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Model: same variants all concentration, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: different variants among concentrations, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: same variants all concentration, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: different variants among concentrations, fit\n",
+      "All gradients check\n"
+     ]
+    }
+   ],
+   "source": [
+    "eps = 1e-7\n",
+    "\n",
+    "epsilon = 0.1\n",
+    "reg_spatial_weight = 0.1\n",
+    "reg_spatial_weight2 = 0.01\n",
+    "\n",
+    "for name, model in models.items():\n",
+    "\n",
+    "    print(f\"\\nModel: {name}\")\n",
+    "\n",
+    "    # analytical\n",
+    "    reg, dreg = model._reg_spatial(\n",
+    "        params=model._params,\n",
+    "        reg_spatial_weight=reg_spatial_weight,\n",
+    "        reg_spatial_weight2=reg_spatial_weight2,\n",
+    "        epsilon=epsilon,\n",
+    "    )\n",
+    "\n",
+    "    # numerical, compare to analytical\n",
+    "    for iparam in range(len(model._params)):\n",
+    "        eps_vec = numpy.zeros(len(model._params))\n",
+    "        eps_vec[iparam] = eps\n",
+    "        reg_eps, _ = model._reg_spatial(\n",
+    "            params=model._params + eps_vec,\n",
+    "            reg_spatial_weight=reg_spatial_weight,\n",
+    "            reg_spatial_weight2=reg_spatial_weight2,\n",
+    "            epsilon=epsilon,\n",
+    "        )\n",
+    "        numerical_grad = (reg_eps - reg) / eps\n",
+    "        analytical_grad = dreg[iparam]\n",
+    "        diff = numpy.sqrt((numerical_grad - analytical_grad) ** 2)\n",
+    "        mag = numpy.sqrt(analytical_grad**2)\n",
+    "        if (diff > 1e-6) or (mag > 0 and diff / mag > 1e-3):\n",
+    "            raise ValueError(\n",
+    "                f\"{iparam=}, {diff=}, {mag=}\\n\"\n",
+    "                f\"{analytical_grad=}\\n{numerical_grad=}\\n\"\n",
+    "            )\n",
+    "\n",
+    "    print(\"All gradients check\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ed5a0e96-46b7-4720-a2bb-dc5f045ca10e",
    "metadata": {},
    "source": [
@@ -393,9 +616,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "3eac6c6b-2d69-4625-906a-03c3ee90a0a9",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-10T14:49:21.483404Z",
+     "iopub.status.busy": "2022-11-10T14:49:21.483272Z",
+     "iopub.status.idle": "2022-11-10T14:49:21.495802Z",
+     "shell.execute_reply": "2022-11-10T14:49:21.495195Z",
+     "shell.execute_reply.started": "2022-11-10T14:49:21.483387Z"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -467,7 +699,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
