implementation of uniqueness regularization

--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -113,7 +113,7 @@
     "### Regularization of epitope uniqueness\n",
     "To regularize to ensure epitopes contain largely unique sites, we define the following term which uses the differentiable average absolute value of escape at a site for an epitope $s_{r,e}$ defined above:\n",
     "$$\n",
-    "R_{\\rm{uniqueness}} = \\lambda_{\\rm{uniqueness}} \\sum_r \\sum_e \\sum_{e'} s_{r,e} s_{r,e'}\n",
+    "R_{\\rm{uniqueness}} = \\frac{1}{2}\\lambda_{\\rm{uniqueness}} \\sum_r \\sum_e \\sum_{e' \\ne e} s_{r,e} s_{r,e'}\n",
     "$$\n",
     "where $e$ and $e'$ range over all pairs of epitopes, and $r$ ranges over all sites."
    ]
@@ -288,12 +288,15 @@
    "source": [
     "#### Calculating $\\frac{\\partial R_{\\rm{uniqueness}}}{\\partial \\beta_{m,e}}$\n",
     "$$\n",
-    "R_{\\rm{uniqueness}}\n",
+    "\\frac{\\partial R_{\\rm{uniqueness}}}{\\partial \\beta_{m,e}}\n",
     "=\n",
-    "\\lambda_{\\rm{uniqueness}} \\sum_r \\sum_e \\sum_{e'}\n",
+    "\\frac{1}{2}\\lambda_{\\rm{uniqueness}} \\sum_r \\sum_{e'} \\sum_{e'' \\ne e'}\n",
     "\\left(\n",
-    "\\frac{\\partial s_{r,e}}{\\partial \\beta_{m,e}} s_{r,e'} + s_{r,e} \\frac{\\partial s_{r,e'}}{\\partial \\beta_{m,e}}\n",
+    "\\frac{\\partial s_{r,e'}}{\\partial \\beta_{m,e}} s_{r,e''} + s_{r,e'} \\frac{\\partial s_{r,e''}}{\\partial \\beta_{m,e}}\n",
     "\\right)\n",
+    "=\n",
+    "\\lambda_{\\rm{uniqueness}} \\sum_{e' \\ne e}\n",
+    "\\frac{\\partial s_{r_m,e}}{\\partial \\beta_{m,e}} s_{r_m,e'}\n",
     "$$"
    ]
   },
