--- a/tests/test_gradients.ipynb
+++ b/tests/test_gradients.ipynb
@@ -19,11 +19,11 @@
    "id": "4cee1ee4-1629-4310-9f65-42e54504f755",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-10T14:49:19.187131Z",
-     "iopub.status.busy": "2022-11-10T14:49:19.186714Z",
-     "iopub.status.idle": "2022-11-10T14:49:21.269840Z",
-     "shell.execute_reply": "2022-11-10T14:49:21.268980Z",
-     "shell.execute_reply.started": "2022-11-10T14:49:19.187055Z"
+     "iopub.execute_input": "2022-11-12T12:02:59.028376Z",
+     "iopub.status.busy": "2022-11-12T12:02:59.027973Z",
+     "iopub.status.idle": "2022-11-12T12:03:00.999878Z",
+     "shell.execute_reply": "2022-11-12T12:03:00.999026Z",
+     "shell.execute_reply.started": "2022-11-12T12:02:59.028305Z"
     },
     "tags": []
    },
@@ -139,11 +139,11 @@
    "id": "80de92ae-ef0b-4216-8884-f1b2f8a8106c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-10T14:49:21.273137Z",
-     "iopub.status.busy": "2022-11-10T14:49:21.272932Z",
-     "iopub.status.idle": "2022-11-10T14:49:21.302339Z",
-     "shell.execute_reply": "2022-11-10T14:49:21.301551Z",
-     "shell.execute_reply.started": "2022-11-10T14:49:21.273111Z"
+     "iopub.execute_input": "2022-11-12T12:03:01.003125Z",
+     "iopub.status.busy": "2022-11-12T12:03:01.002919Z",
+     "iopub.status.idle": "2022-11-12T12:03:01.032257Z",
+     "shell.execute_reply": "2022-11-12T12:03:01.031518Z",
+     "shell.execute_reply.started": "2022-11-12T12:03:01.003104Z"
     },
     "tags": []
    },
@@ -219,11 +219,11 @@
    "id": "4cd10913-d096-457f-9dff-af8385c7ddeb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-10T14:49:21.306301Z",
-     "iopub.status.busy": "2022-11-10T14:49:21.306087Z",
-     "iopub.status.idle": "2022-11-10T14:49:21.413693Z",
-     "shell.execute_reply": "2022-11-10T14:49:21.412781Z",
-     "shell.execute_reply.started": "2022-11-10T14:49:21.306280Z"
+     "iopub.execute_input": "2022-11-12T12:03:01.036277Z",
+     "iopub.status.busy": "2022-11-12T12:03:01.036046Z",
+     "iopub.status.idle": "2022-11-12T12:03:01.138173Z",
+     "shell.execute_reply": "2022-11-12T12:03:01.137480Z",
+     "shell.execute_reply.started": "2022-11-12T12:03:01.036256Z"
     },
     "tags": []
    },
@@ -290,11 +290,11 @@
    "id": "e6c5bbed-2dde-44bf-9375-ee4b31d673cc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-10T14:49:21.417232Z",
-     "iopub.status.busy": "2022-11-10T14:49:21.416989Z",
-     "iopub.status.idle": "2022-11-10T14:49:21.425836Z",
-     "shell.execute_reply": "2022-11-10T14:49:21.425252Z",
-     "shell.execute_reply.started": "2022-11-10T14:49:21.417211Z"
+     "iopub.execute_input": "2022-11-12T12:03:01.141081Z",
+     "iopub.status.busy": "2022-11-12T12:03:01.140893Z",
+     "iopub.status.idle": "2022-11-12T12:03:01.149374Z",
+     "shell.execute_reply": "2022-11-12T12:03:01.148782Z",
+     "shell.execute_reply.started": "2022-11-12T12:03:01.141061Z"
     },
     "tags": []
    },
@@ -363,11 +363,11 @@
    "id": "89650449-2a91-437a-956f-661a4ece7573",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-10T14:49:21.428575Z",
-     "iopub.status.busy": "2022-11-10T14:49:21.428416Z",
-     "iopub.status.idle": "2022-11-10T14:49:21.444211Z",
-     "shell.execute_reply": "2022-11-10T14:49:21.443449Z",
-     "shell.execute_reply.started": "2022-11-10T14:49:21.428555Z"
+     "iopub.execute_input": "2022-11-12T12:03:01.152281Z",
+     "iopub.status.busy": "2022-11-12T12:03:01.152060Z",
+     "iopub.status.idle": "2022-11-12T12:03:01.168516Z",
+     "shell.execute_reply": "2022-11-12T12:03:01.167841Z",
+     "shell.execute_reply.started": "2022-11-12T12:03:01.152258Z"
     },
     "tags": []
    },
@@ -439,11 +439,11 @@
    "id": "0291ad6f-a5a3-4ad0-9bbf-e1ad66f28982",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-10T14:49:21.447224Z",
-     "iopub.status.busy": "2022-11-10T14:49:21.446979Z",
-     "iopub.status.idle": "2022-11-10T14:49:21.462936Z",
-     "shell.execute_reply": "2022-11-10T14:49:21.462342Z",
-     "shell.execute_reply.started": "2022-11-10T14:49:21.447203Z"
+     "iopub.execute_input": "2022-11-12T12:03:01.171817Z",
+     "iopub.status.busy": "2022-11-12T12:03:01.171600Z",
+     "iopub.status.idle": "2022-11-12T12:03:01.188969Z",
+     "shell.execute_reply": "2022-11-12T12:03:01.188380Z",
+     "shell.execute_reply.started": "2022-11-12T12:03:01.171793Z"
     },
     "tags": []
    },
@@ -536,11 +536,11 @@
    "id": "6d471132-f3d1-419b-98e2-0e441c1a1445",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-10T14:49:21.465522Z",
-     "iopub.status.busy": "2022-11-10T14:49:21.465382Z",
-     "iopub.status.idle": "2022-11-10T14:49:21.480917Z",
-     "shell.execute_reply": "2022-11-10T14:49:21.480348Z",
-     "shell.execute_reply.started": "2022-11-10T14:49:21.465504Z"
+     "iopub.execute_input": "2022-11-12T12:03:01.191895Z",
+     "iopub.status.busy": "2022-11-12T12:03:01.191681Z",
+     "iopub.status.idle": "2022-11-12T12:03:01.208061Z",
+     "shell.execute_reply": "2022-11-12T12:03:01.207484Z",
+     "shell.execute_reply.started": "2022-11-12T12:03:01.191871Z"
     },
     "tags": []
    },
@@ -608,6 +608,86 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6c0bc6f7-a0b4-4bb0-8ac0-8ed40479f91d",
+   "metadata": {},
+   "source": [
+    "## Gradient of epitope uniqueness regularization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2a16f2d5-9529-4796-abac-4412eae7136c",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-12T12:03:01.211457Z",
+     "iopub.status.busy": "2022-11-12T12:03:01.211231Z",
+     "iopub.status.idle": "2022-11-12T12:03:01.226063Z",
+     "shell.execute_reply": "2022-11-12T12:03:01.225506Z",
+     "shell.execute_reply.started": "2022-11-12T12:03:01.211433Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Model: same variants all concentration, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: different variants among concentrations, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: same variants all concentration, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: different variants among concentrations, fit\n",
+      "All gradients check\n"
+     ]
+    }
+   ],
+   "source": [
+    "eps = 1e-7\n",
+    "\n",
+    "epsilon = 0.1\n",
+    "\n",
+    "for name, model in models.items():\n",
+    "\n",
+    "    print(f\"\\nModel: {name}\")\n",
+    "\n",
+    "    # analytical\n",
+    "    reg, dreg = model._reg_uniqueness(\n",
+    "        params=model._params,\n",
+    "        weight=0.2,\n",
+    "        epsilon=epsilon,\n",
+    "    )\n",
+    "\n",
+    "    # numerical, compare to analytical\n",
+    "    for iparam in range(len(model._params)):\n",
+    "        eps_vec = numpy.zeros(len(model._params))\n",
+    "        eps_vec[iparam] = eps\n",
+    "        reg_eps, _ = model._reg_uniqueness(\n",
+    "            params=model._params + eps_vec,\n",
+    "            weight=0.2,\n",
+    "            epsilon=epsilon,\n",
+    "        )\n",
+    "        numerical_grad = (reg_eps - reg) / eps\n",
+    "        analytical_grad = dreg[iparam]\n",
+    "        diff = numpy.sqrt((numerical_grad - analytical_grad) ** 2)\n",
+    "        mag = numpy.sqrt(analytical_grad**2)\n",
+    "        if (diff > 1e-7) or (mag > 0 and diff / mag > 1e-3):\n",
+    "            raise ValueError(\n",
+    "                f\"{iparam=}, {diff=}, {mag=}\\n\"\n",
+    "                f\"{analytical_grad=}\\n{numerical_grad=}\\n\"\n",
+    "            )\n",
+    "\n",
+    "    print(\"All gradients check\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ed5a0e96-46b7-4720-a2bb-dc5f045ca10e",
    "metadata": {},
    "source": [
@@ -616,15 +696,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "3eac6c6b-2d69-4625-906a-03c3ee90a0a9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-10T14:49:21.483404Z",
-     "iopub.status.busy": "2022-11-10T14:49:21.483272Z",
-     "iopub.status.idle": "2022-11-10T14:49:21.495802Z",
-     "shell.execute_reply": "2022-11-10T14:49:21.495195Z",
-     "shell.execute_reply.started": "2022-11-10T14:49:21.483387Z"
+     "iopub.execute_input": "2022-11-12T12:03:01.228797Z",
+     "iopub.status.busy": "2022-11-12T12:03:01.228569Z",
+     "iopub.status.idle": "2022-11-12T12:03:01.242694Z",
+     "shell.execute_reply": "2022-11-12T12:03:01.241997Z",
+     "shell.execute_reply.started": "2022-11-12T12:03:01.228775Z"
     },
     "tags": []
    },
