regularize magnitude of activity

--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -124,8 +124,10 @@
    "metadata": {},
    "source": [
     "### Regularization of epitope activities\n",
-    "We regularize the epitope activities $a_{\\rm{wt}, e}$ the wildtype activities so that the regularization is 0 when the activity is negative and a Pseudo-Huber function when the activity is positive, so that\n",
-    "$$R_{\\rm{activity}} = \\lambda_{\\rm{activity}} \\sum_e \\begin{cases} 0 & \\rm{if \\;} a_{\\rm{wt}, e} < 0 \\\\ h_{\\delta_{\\rm{activity}}}\\left(a_{\\rm{wt}, e}\\right) & \\rm{if \\;} a_{\\rm{wt}, e} \\ge 0\\end{cases} $$\n",
+    "We regularize the epitope activities $a_{\\rm{wt}, e}$ to be close to zero using Pseudo-Huber function, so that\n",
+    "$$\n",
+    "R_{\\rm{activity}} = \\lambda_{\\rm{activity}} h_{\\delta_{\\rm{activity}}}\\left(a_{\\rm{wt}, e}\\right)\n",
+    "$$\n",
     "where $\\lambda_{\\rm{activity}}$ is the strength of the regularization and $\\delta_{\\rm{activity}}$ is the Psdeuo-Huber delta parameter."
    ]
   },
@@ -307,8 +309,9 @@
    "source": [
     "#### Calculating $\\frac{\\partial R_{\\rm{activity}}}{\\partial a_{\\rm{wt}, e}}$\n",
     "\n",
-    "$$\\frac{\\partial R_{\\rm{activity}}}{\\partial a_{\\rm{wt}, e}} = \\begin{cases} 0 & \\rm{if \\;} a_{\\rm{wt}, e} < 0 \\\\ \n",
-    "\\frac{\\lambda_{\\rm{escape}}a_{\\rm{wt}, e}}{h_{\\delta_{\\rm{activity}}}\\left(a_{\\rm{wt}, e}\\right) + \\delta_{\\rm{activity}}} & \\rm{if \\;} a_{\\rm{wt}, e} \\ge 0 \\end{cases}$$"
+    "$$\\frac{\\partial R_{\\rm{activity}}}{\\partial a_{\\rm{wt}, e}} =\n",
+    "\\frac{\\lambda_{\\rm{escape}}a_{\\rm{wt}, e}}{h_{\\delta_{\\rm{activity}}}\\left(a_{\\rm{wt}, e}\\right) + \\delta_{\\rm{activity}}} \n",
+    "$$"
    ]
   },
   {
@@ -323,6 +326,14 @@
     "Finally, the fit parameters or predictions from the models are summarized.\n",
     "Note that mutations may not be present in some bootstrap replicates if they are only in a few variants, and this can be assessed by looking at the `frac_boostrap_replicates` column in the output from `PolyclonalBootstrap`."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4b55a9b-ee9c-4406-840d-09327a5e76a1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
