make activity regularizaton insensitive to concentration units

--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -124,9 +124,11 @@
    "metadata": {},
    "source": [
     "### Regularization of epitope activities\n",
-    "We regularize the epitope activities $a_{\\rm{wt}, e}$ to be close to zero using Pseudo-Huber function, so that\n",
+    "We regularize the epitope activities $a_{\\rm{wt}, e}$ to be close to zero using Pseudo-Huber function.\n",
+    "Note that the activities are confounded with the concentration scale, so for this regularization we first compute the geometric mean concentration $c_{GM}$ and incorporate that so the strength of the regularization is about the same regardless of the concentrations.\n",
+    "Specifically, the regularization is:\n",
     "$$\n",
-    "R_{\\rm{activity}} = \\lambda_{\\rm{activity}} h_{\\delta_{\\rm{activity}}}\\left(a_{\\rm{wt}, e}\\right)\n",
+    "R_{\\rm{activity}} = \\lambda_{\\rm{activity}} h_{\\delta_{\\rm{activity}}}\\left(a_{\\rm{wt}, e} + \\log c_{GM} \\right)\n",
     "$$\n",
     "where $\\lambda_{\\rm{activity}}$ is the strength of the regularization and $\\delta_{\\rm{activity}}$ is the Psdeuo-Huber delta parameter."
    ]
@@ -310,7 +312,7 @@
     "#### Calculating $\\frac{\\partial R_{\\rm{activity}}}{\\partial a_{\\rm{wt}, e}}$\n",
     "\n",
     "$$\\frac{\\partial R_{\\rm{activity}}}{\\partial a_{\\rm{wt}, e}} =\n",
-    "\\frac{\\lambda_{\\rm{escape}}a_{\\rm{wt}, e}}{h_{\\delta_{\\rm{activity}}}\\left(a_{\\rm{wt}, e}\\right) + \\delta_{\\rm{activity}}} \n",
+    "\\frac{\\lambda_{\\rm{escape}}\\left(a_{\\rm{wt}, e} + \\log c_{GM}\\right)}{h_{\\delta_{\\rm{activity}}}\\left(a_{\\rm{wt}, e} + \\log c_{GM}\\right) + \\delta_{\\rm{activity}}} \n",
     "$$"
    ]
   },
