rename similarity regularization to uniqueness2

--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -46,8 +46,9 @@
     "\n",
     " 1. Most mutations should not mediate escape,\n",
     " 2. When a site is involved in escape for a given epitope, most mutations at a site will have similar-ish effects.\n",
-    " 3. A site involved in escape should only mediate escape from a single epitope.\n",
-    " 4. Epitope activities should be small (or negative) except when clear evidence to the contrary."
+    " 3. Epitopes should be mostly unique: a site involved in escape should usually only mediate escape from a single epitope.\n",
+    " 4. Epitopes should be relatively spatially compact (requires structural information).\n",
+    " 5. Epitope activities should be small (or negative) except when clear evidence to the contrary."
    ]
   },
   {
@@ -70,17 +71,6 @@
     "We regularize the variance of the escape values at each site, so that\n",
     "$$R_{\\rm{spread}} = \\lambda_{\\rm{spread}} \\sum_{e,i} \\frac{1}{M_i}\\sum_{m \\in i}\\left(\\beta_{m,e} - \\frac{1}{M_i} \\sum_{m' \\in i} \\beta_{m',e}\\right)^2$$\n",
     "where $i$ ranges over all sites, $M_i$ is the number of mutations at site $i$, and $m \\in i$ indicates all mutations at site $i$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b97283dd-5895-43b1-9d99-271557b7fca7",
-   "metadata": {},
-   "source": [
-    "### Regularization of similarity of escape values at each site across epitopes\n",
-    "We regularize the similarity of escape values $\\beta_{m,e}$ at each site across epitopes, so that\n",
-    "$$ R_{\\rm{similarity}} = \\lambda_{\\rm{similarity}} \\sum_{i} \\sum_{j > i} \\sum_{k} \\left(\\sum_{m' \\in S_{k}} \\beta_{m',i}^2\\right)\\left(\\sum_{m' \\in S_{k}} \\beta_{m',j}^2\\right)$$\n",
-    "where $i$, $j$ range over all epitopes $E$, $k$ is the site index, and $m' \\in S_{k}$ represents all mutations at site $k$."
    ]
   },
   {
@@ -116,6 +106,17 @@
     "R_{\\rm{uniqueness}} = \\frac{1}{2}\\lambda_{\\rm{uniqueness}} \\sum_r \\sum_e \\sum_{e' \\ne e} s_{r,e} s_{r,e'}\n",
     "$$\n",
     "where $e$ and $e'$ range over all pairs of epitopes, and $r$ ranges over all sites."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26663350-97d0-49c6-8edb-72015dac6e46",
+   "metadata": {},
+   "source": [
+    "### Regularization of epitope uniqueness$^2$\n",
+    "This is a second regularization to ensure epitopes contain largely unique sites, but this one operates on the **squared** product of escape at a site, and so will more strongly penalize very large escape at same site, but less penalize weak shared constraint:\n",
+    "$$ R_{\\rm{uniquness}^2} = \\lambda_{\\rm{uniqueness}^2} \\sum_{i} \\sum_{j > i} \\sum_{k} \\left(\\sum_{m' \\in S_{k}} \\beta_{m',i}^2\\right)\\left(\\sum_{m' \\in S_{k}} \\beta_{m',j}^2\\right)$$\n",
+    "where $i$, $j$ range over all epitopes $E$, $k$ is the site index, and $m' \\in S_{k}$ represents all mutations at site $k$."
    ]
   },
   {
@@ -242,15 +243,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "160d1b13-c2a8-41ea-bce3-3485a4c7f3a5",
-   "metadata": {},
-   "source": [
-    "#### Calculating $\\frac{\\partial R_{\\rm{similarity}}}{\\partial \\beta_{m,e}}$\n",
-    "$$ \\frac{\\partial{R_{\\rm{similarity}}}}{\\partial{\\beta_{m,e}}} = 2\\lambda_{\\rm{similarity}} \\beta_{m,e} \\sum_{j \\neq e} \\sum_{m' \\in S_k}\\left(\\beta_{m',j}^2\\right)$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "a200cfb3-33dd-403f-9dd0-3ed1b50120bb",
    "metadata": {},
    "source": [
@@ -302,6 +294,15 @@
     "\\lambda_{\\rm{uniqueness}} \\sum_{e' \\ne e}\n",
     "\\frac{\\partial s_{r_m,e}}{\\partial \\beta_{m,e}} s_{r_m,e'}\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a233635-cd39-4b6b-8655-2845ba63aa7e",
+   "metadata": {},
+   "source": [
+    "#### Calculating $\\frac{\\partial R_{\\rm{uniqueness}^2}}{\\partial \\beta_{m,e}}$\n",
+    "$$ \\frac{\\partial{R_{\\rm{uniqueness}^2}}}{\\partial{\\beta_{m,e}}} = 2\\lambda_{\\rm{uniqueness}^2} \\beta_{m,e} \\sum_{j \\neq e} \\sum_{m' \\in S_k}\\left(\\beta_{m',j}^2\\right)$$"
    ]
   },
   {
