--- a/tests/test_gradients.ipynb
+++ b/tests/test_gradients.ipynb
@@ -19,11 +19,11 @@
    "id": "4cee1ee4-1629-4310-9f65-42e54504f755",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-12T12:02:59.028376Z",
-     "iopub.status.busy": "2022-11-12T12:02:59.027973Z",
-     "iopub.status.idle": "2022-11-12T12:03:00.999878Z",
-     "shell.execute_reply": "2022-11-12T12:03:00.999026Z",
-     "shell.execute_reply.started": "2022-11-12T12:02:59.028305Z"
+     "iopub.execute_input": "2022-11-12T21:44:12.371881Z",
+     "iopub.status.busy": "2022-11-12T21:44:12.371366Z",
+     "iopub.status.idle": "2022-11-12T21:44:18.547246Z",
+     "shell.execute_reply": "2022-11-12T21:44:18.546478Z",
+     "shell.execute_reply.started": "2022-11-12T21:44:12.371749Z"
     },
     "tags": []
    },
@@ -139,11 +139,11 @@
    "id": "80de92ae-ef0b-4216-8884-f1b2f8a8106c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-12T12:03:01.003125Z",
-     "iopub.status.busy": "2022-11-12T12:03:01.002919Z",
-     "iopub.status.idle": "2022-11-12T12:03:01.032257Z",
-     "shell.execute_reply": "2022-11-12T12:03:01.031518Z",
-     "shell.execute_reply.started": "2022-11-12T12:03:01.003104Z"
+     "iopub.execute_input": "2022-11-12T21:44:18.548905Z",
+     "iopub.status.busy": "2022-11-12T21:44:18.548603Z",
+     "iopub.status.idle": "2022-11-12T21:44:18.590424Z",
+     "shell.execute_reply": "2022-11-12T21:44:18.589725Z",
+     "shell.execute_reply.started": "2022-11-12T21:44:18.548881Z"
     },
     "tags": []
    },
@@ -219,11 +219,11 @@
    "id": "4cd10913-d096-457f-9dff-af8385c7ddeb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-12T12:03:01.036277Z",
-     "iopub.status.busy": "2022-11-12T12:03:01.036046Z",
-     "iopub.status.idle": "2022-11-12T12:03:01.138173Z",
-     "shell.execute_reply": "2022-11-12T12:03:01.137480Z",
-     "shell.execute_reply.started": "2022-11-12T12:03:01.036256Z"
+     "iopub.execute_input": "2022-11-12T21:44:18.591396Z",
+     "iopub.status.busy": "2022-11-12T21:44:18.591240Z",
+     "iopub.status.idle": "2022-11-12T21:44:18.696843Z",
+     "shell.execute_reply": "2022-11-12T21:44:18.696130Z",
+     "shell.execute_reply.started": "2022-11-12T21:44:18.591376Z"
     },
     "tags": []
    },
@@ -290,11 +290,11 @@
    "id": "e6c5bbed-2dde-44bf-9375-ee4b31d673cc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-12T12:03:01.141081Z",
-     "iopub.status.busy": "2022-11-12T12:03:01.140893Z",
-     "iopub.status.idle": "2022-11-12T12:03:01.149374Z",
-     "shell.execute_reply": "2022-11-12T12:03:01.148782Z",
-     "shell.execute_reply.started": "2022-11-12T12:03:01.141061Z"
+     "iopub.execute_input": "2022-11-12T21:44:18.697976Z",
+     "iopub.status.busy": "2022-11-12T21:44:18.697823Z",
+     "iopub.status.idle": "2022-11-12T21:44:18.706453Z",
+     "shell.execute_reply": "2022-11-12T21:44:18.705839Z",
+     "shell.execute_reply.started": "2022-11-12T21:44:18.697957Z"
     },
     "tags": []
    },
@@ -363,11 +363,11 @@
    "id": "89650449-2a91-437a-956f-661a4ece7573",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-12T12:03:01.152281Z",
-     "iopub.status.busy": "2022-11-12T12:03:01.152060Z",
-     "iopub.status.idle": "2022-11-12T12:03:01.168516Z",
-     "shell.execute_reply": "2022-11-12T12:03:01.167841Z",
-     "shell.execute_reply.started": "2022-11-12T12:03:01.152258Z"
+     "iopub.execute_input": "2022-11-12T21:44:18.708064Z",
+     "iopub.status.busy": "2022-11-12T21:44:18.707823Z",
+     "iopub.status.idle": "2022-11-12T21:44:18.722813Z",
+     "shell.execute_reply": "2022-11-12T21:44:18.722148Z",
+     "shell.execute_reply.started": "2022-11-12T21:44:18.708042Z"
     },
     "tags": []
    },
@@ -439,11 +439,11 @@
    "id": "0291ad6f-a5a3-4ad0-9bbf-e1ad66f28982",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-12T12:03:01.171817Z",
-     "iopub.status.busy": "2022-11-12T12:03:01.171600Z",
-     "iopub.status.idle": "2022-11-12T12:03:01.188969Z",
-     "shell.execute_reply": "2022-11-12T12:03:01.188380Z",
-     "shell.execute_reply.started": "2022-11-12T12:03:01.171793Z"
+     "iopub.execute_input": "2022-11-12T21:44:18.723930Z",
+     "iopub.status.busy": "2022-11-12T21:44:18.723688Z",
+     "iopub.status.idle": "2022-11-12T21:44:18.739220Z",
+     "shell.execute_reply": "2022-11-12T21:44:18.738560Z",
+     "shell.execute_reply.started": "2022-11-12T21:44:18.723907Z"
     },
     "tags": []
    },
@@ -536,11 +536,11 @@
    "id": "6d471132-f3d1-419b-98e2-0e441c1a1445",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-12T12:03:01.191895Z",
-     "iopub.status.busy": "2022-11-12T12:03:01.191681Z",
-     "iopub.status.idle": "2022-11-12T12:03:01.208061Z",
-     "shell.execute_reply": "2022-11-12T12:03:01.207484Z",
-     "shell.execute_reply.started": "2022-11-12T12:03:01.191871Z"
+     "iopub.execute_input": "2022-11-12T21:44:18.740167Z",
+     "iopub.status.busy": "2022-11-12T21:44:18.740022Z",
+     "iopub.status.idle": "2022-11-12T21:44:18.755824Z",
+     "shell.execute_reply": "2022-11-12T21:44:18.755145Z",
+     "shell.execute_reply.started": "2022-11-12T21:44:18.740149Z"
     },
     "tags": []
    },
@@ -620,11 +620,11 @@
    "id": "2a16f2d5-9529-4796-abac-4412eae7136c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-12T12:03:01.211457Z",
-     "iopub.status.busy": "2022-11-12T12:03:01.211231Z",
-     "iopub.status.idle": "2022-11-12T12:03:01.226063Z",
-     "shell.execute_reply": "2022-11-12T12:03:01.225506Z",
-     "shell.execute_reply.started": "2022-11-12T12:03:01.211433Z"
+     "iopub.execute_input": "2022-11-12T21:44:18.756831Z",
+     "iopub.status.busy": "2022-11-12T21:44:18.756663Z",
+     "iopub.status.idle": "2022-11-12T21:44:18.769286Z",
+     "shell.execute_reply": "2022-11-12T21:44:18.768634Z",
+     "shell.execute_reply.started": "2022-11-12T21:44:18.756811Z"
     },
     "tags": []
    },
@@ -691,20 +691,20 @@
    "id": "ed5a0e96-46b7-4720-a2bb-dc5f045ca10e",
    "metadata": {},
    "source": [
-    "## Gradient of epitope similarity regularization"
+    "## Gradient of epitope uniqueness$^2$ regularization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "3eac6c6b-2d69-4625-906a-03c3ee90a0a9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-12T12:03:01.228797Z",
-     "iopub.status.busy": "2022-11-12T12:03:01.228569Z",
-     "iopub.status.idle": "2022-11-12T12:03:01.242694Z",
-     "shell.execute_reply": "2022-11-12T12:03:01.241997Z",
-     "shell.execute_reply.started": "2022-11-12T12:03:01.228775Z"
+     "iopub.execute_input": "2022-11-12T21:46:17.441305Z",
+     "iopub.status.busy": "2022-11-12T21:46:17.440796Z",
+     "iopub.status.idle": "2022-11-12T21:46:17.460619Z",
+     "shell.execute_reply": "2022-11-12T21:46:17.459748Z",
+     "shell.execute_reply.started": "2022-11-12T21:46:17.441265Z"
     },
     "tags": []
    },
@@ -736,7 +736,7 @@
     "    print(f\"\\nModel: {name}\")\n",
     "\n",
     "    # analytical\n",
-    "    reg, dreg = model._reg_similarity(\n",
+    "    reg, dreg = model._reg_uniqueness2(\n",
     "        params=model._params,\n",
     "        weight=0.2,\n",
     "    )\n",
@@ -745,7 +745,7 @@
     "    for iparam in range(len(model._params)):\n",
     "        eps_vec = numpy.zeros(len(model._params))\n",
     "        eps_vec[iparam] = eps\n",
-    "        reg_eps, _ = model._reg_similarity(\n",
+    "        reg_eps, _ = model._reg_uniqueness2(\n",
     "            params=model._params + eps_vec,\n",
     "            weight=0.2,\n",
     "        )\n",
@@ -753,7 +753,7 @@
     "        analytical_grad = dreg[iparam]\n",
     "        diff = numpy.sqrt((numerical_grad - analytical_grad) ** 2)\n",
     "        mag = numpy.sqrt(analytical_grad**2)\n",
-    "        if (diff > 1e-6) or (mag > 0 and diff / mag > 1e-3):\n",
+    "        if (diff > 1e-5) or (mag > 0 and diff / mag > 1e-3):\n",
     "            raise ValueError(\n",
     "                f\"{iparam=}, {diff=}, {mag=}\\n\"\n",
     "                f\"{analytical_grad=}\\n{numerical_grad=}\\n\"\n",
@@ -761,6 +761,14 @@
     "\n",
     "    print(\"All gradients check\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7237118f-7515-4504-b605-94c130031edb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
