--- a/tests/test_gradients.ipynb
+++ b/tests/test_gradients.ipynb
@@ -569,7 +569,7 @@
     "\n",
     "epsilon = 0.1\n",
     "reg_spatial_weight = 0.1\n",
-    "reg_spatial_weight2 = 0.01\n",
+    "reg_spatial2_weight = 0.01\n",
     "\n",
     "for name, model in models.items():\n",
     "\n",
@@ -579,7 +579,7 @@
     "    reg, dreg = model._reg_spatial(\n",
     "        params=model._params,\n",
     "        reg_spatial_weight=reg_spatial_weight,\n",
-    "        reg_spatial_weight2=reg_spatial_weight2,\n",
+    "        reg_spatial2_weight=reg_spatial2_weight,\n",
     "        epsilon=epsilon,\n",
     "    )\n",
     "\n",
@@ -590,7 +590,7 @@
     "        reg_eps, _ = model._reg_spatial(\n",
     "            params=model._params + eps_vec,\n",
     "            reg_spatial_weight=reg_spatial_weight,\n",
-    "            reg_spatial_weight2=reg_spatial_weight2,\n",
+    "            reg_spatial2_weight=reg_spatial2_weight,\n",
     "            epsilon=epsilon,\n",
     "        )\n",
     "        numerical_grad = (reg_eps - reg) / eps\n",
