--- a/notebooks/RBD_bootstrap.ipynb
+++ b/notebooks/RBD_bootstrap.ipynb
@@ -191,7 +191,8 @@
     "start = time.time()\n",
     "print(f\"Starting fitting bootstrap models at {time.asctime()}\")\n",
     "n_fit, n_failed = bootstrap_poly.fit_models(\n",
-    "    reg_escape_weight=0.01, reg_uniqueness2_weight=0,\n",
+    "    reg_escape_weight=0.01,\n",
+    "    reg_uniqueness2_weight=0,\n",
     ")\n",
     "print(f\"Fitting took {time.time() - start:.3g} seconds, finished at {time.asctime()}\")\n",
     "assert n_failed == 0 and n_fit == n_bootstrap_samples"
