--- a/notebooks/fit_RBD.ipynb
+++ b/notebooks/fit_RBD.ipynb
@@ -389,7 +389,7 @@
     "    _ = tmpf.write(r.content)\n",
     "    tmpf.flush()\n",
     "    spatial_distances = polyclonal.pdb_utils.inter_residue_distances(tmpf.name, [\"A\"])\n",
-    "    \n",
+    "\n",
     "spatial_distances"
    ]
   },
@@ -1300,9 +1300,7 @@
     "\n",
     "# for testing since we nbval ignore cell output\n",
     "assert (\n",
-    "    numpy.allclose(\n",
-    "        corr[\"correlation (R^2)\"], numpy.array([0.6, 0.96, 0.95]), atol=0.02\n",
-    "    )\n",
+    "    numpy.allclose(corr[\"correlation (R^2)\"], numpy.array([0.6, 0.96, 0.95]), atol=0.02)\n",
     "    == True\n",
     ")\n",
     "\n",
