--- a/notebooks/real_serum.ipynb
+++ b/notebooks/real_serum.ipynb
@@ -66,16 +66,13 @@
     "    \"libB\": \"B_2022-09-27_rescue-3_IDC508_1_prob_escape.csv\",\n",
     "}\n",
     "\n",
-    "prob_escape = (\n",
-    "    pd.concat(\n",
-    "        [\n",
-    "            pd.read_csv(f, keep_default_na=False, na_values=\"nan\").assign(library=lib)\n",
-    "            for lib, f in prob_escape_files.items()\n",
-    "        ],\n",
-    "        ignore_index=True,\n",
-    "    )\n",
-    "    .query(\"`no-antibody_count` >= no_antibody_count_threshold\")\n",
-    ")\n",
+    "prob_escape = pd.concat(\n",
+    "    [\n",
+    "        pd.read_csv(f, keep_default_na=False, na_values=\"nan\").assign(library=lib)\n",
+    "        for lib, f in prob_escape_files.items()\n",
+    "    ],\n",
+    "    ignore_index=True,\n",
+    ").query(\"`no-antibody_count` >= no_antibody_count_threshold\")\n",
     "\n",
     "assert prob_escape.notnull().all().all()"
    ]
@@ -502,7 +499,8 @@
    ],
    "source": [
     "spatial_distances = polyclonal.pdb_utils.inter_residue_distances(\n",
-    "    \"Env_trimer.pdb\", target_chains=[\"A\", \"B\", \"C\"],\n",
+    "    \"Env_trimer.pdb\",\n",
+    "    target_chains=[\"A\", \"B\", \"C\"],\n",
     ")\n",
     "\n",
     "spatial_distances"
@@ -874,9 +872,9 @@
     "reference_sites = pd.read_csv(\"Env_site_numbering_map.csv\")[\"reference_site\"].tolist()\n",
     "\n",
     "for library, df in prob_escape.groupby(\"library\"):\n",
-    "    \n",
+    "\n",
     "    print(f\"\\n\\nFitting for {library}\")\n",
-    "    \n",
+    "\n",
     "    model = polyclonal.Polyclonal(\n",
     "        n_epitopes=2,\n",
     "        data_to_fit=df.rename(\n",
